--- a/src/component/gamepage/scss/GamePage.scss
+++ b/src/component/gamepage/scss/GamePage.scss
@@ -147,3 +147,25 @@ html,body{
   width: 300px;
   height: 300px;
 }
+
+// -----------------------
+.p{
+  position: absolute;
+  right: 30px;
+  top: 0;
+}
+.o{
+  position: absolute;
+  right: 30px;
+  top: 15px;
+}
+.i{
+  position: absolute;
+  right: 30px;
+  top: 30px;
+}
+.modal-open-btn{
+  position: absolute;
+  top: 60px;
+  right: 30px;
+}
