--- a/src/component/gamepage/scss/GamePage.scss
+++ b/src/component/gamepage/scss/GamePage.scss
@@ -141,6 +141,7 @@ html,body{
   width: 250px;
   height: 150px;
   padding: 15px;
+  z-index: 100;
 }
 
 .showImg{
@@ -168,4 +169,9 @@ html,body{
   position: absolute;
   top: 60px;
   right: 30px;
+}
+
+.time{
+  position: absolute;
+  right: 50%;
 }
