--- a/src/component/gamepage/scss/GamePage.scss
+++ b/src/component/gamepage/scss/GamePage.scss
@@ -1,10 +1,7 @@
-html,body{
-  width: 100%;
-  height: 100%;
-}
+
 .box{
   width: 100%;
-  height: 92.5vh;
+  height: 101vh;
   background: #61dafb;
   display: flex;
   flex-direction: row;
@@ -44,12 +41,10 @@ html,body{
 
 }
 .create{
-  position: absolute;
   right: 20px;
   bottom: 20px;
 }
 .input{
-  position: absolute;
   right: 130px;
   bottom: 20px;
 }
@@ -137,19 +132,26 @@ html,body{
 }
 
 .modal-content {
-  background-color: #ffffff;
-  width: 250px;
-  height: 150px;
+  display: flex;
+  flex-direction: column;
+  background-color: #66FFCC;
+  border-radius: 24px;
+  width: 60%;
+  height: 60%;
   padding: 15px;
-  z-index: 100;
 }
 
-.showImg{
-  width: 300px;
-  height: 300px;
+.imgs{
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  height: 50%;
 }
-
-// -----------------------
+.items{
+  display: flex;
+  align-items: end;
+}
+// ---------------------------------
 .p{
   position: absolute;
   right: 30px;
@@ -158,20 +160,21 @@ html,body{
 .o{
   position: absolute;
   right: 30px;
-  top: 15px;
+  top: 30px;
 }
 .i{
   position: absolute;
   right: 30px;
-  top: 30px;
+  top: 60px;
 }
+//-----------------------------------
 .modal-open-btn{
   position: absolute;
-  top: 60px;
+  top: 90px;
   right: 30px;
 }
 
-.time{
+.time {
   position: absolute;
   right: 50%;
 }
