--- a/src/component/gamepage/scss/GamePage.scss
+++ b/src/component/gamepage/scss/GamePage.scss
@@ -49,10 +49,8 @@
   bottom: 20px;
 }
 .img{
-  width: 200px;
-  height: 200px;
+  width: 20%;
   border: 1px solid black;
-  margin-right: 30px;
 }
 .chat-log{
   width: 100%;
@@ -136,7 +134,7 @@
   flex-direction: column;
   background-color: #66FFCC;
   border-radius: 24px;
-  width: 60%;
+  width: 70%;
   height: 60%;
   padding: 15px;
 }
@@ -167,13 +165,40 @@
   right: 30px;
   top: 60px;
 }
+.u{
+  position: absolute;
+  right: 30px;
+  top: 90px;
+}
 //-----------------------------------
 .modal-open-btn{
   position: absolute;
-  top: 90px;
+  top: 120px;
   right: 30px;
 }
 
 .time {
   right: 50%;
+}
+
+// 스피너
+.loading_circle {
+  width: 50px;
+  height: 50px;
+  margin: 10px auto;
+
+  border: 10px solid #e3e3e3;
+  border-bottom: 10px solid #000000;
+  border-radius: 50%;
+
+  animation: load 1.5s linear infinite;
+}
+
+@keyframes load {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
