--- a/src/user/scss/UserMyPage.scss
+++ b/src/user/scss/UserMyPage.scss
@@ -5,7 +5,6 @@
   width: 100%;
   height: 100vh;
   background: #151422;
-  overflow: scroll;
   padding-bottom: 5rem;
 
   .user-setting-buttons {
@@ -31,7 +30,7 @@
   .user-page-background {
     width: 100%;
     height: 50vh;
-    background: linear-gradient(90deg, #5fffa9 0%, #ab56ff 100%);
+    //background: linear-gradient(90deg, #5fffa9 0%, #ab56ff 100%);
     display: flex;
     flex-flow: row nowrap;
     align-items: end;
@@ -61,7 +60,7 @@
 
       .user-info-contain {
 
-        .user-info-change-item {
+        .user-name-item {
           //flex-wrap: wrap;
           //align-items: center;
           //margin-bottom: 1rem;
@@ -106,8 +105,8 @@
               //background: linear-gradient(180deg, rgba(21,20,34,1) 0%, rgba(51,48,80,1) 80%);
               //font-size: 2.5rem;
               //display: flex; align-items: center; justify-content: center;
-              background: linear-gradient(90deg, #5fffa9 0%, #ab56ff 100%);
-              filter: drop-shadow(0px 0px 10px #e2e0ff75);
+              //background: linear-gradient(90deg, #5fffa9 0%, #ab56ff 100%);
+              //filter: drop-shadow(0px 0px 10px #ffffff);
               color: #FFFFFF;
               border-radius: 50%;
               padding: 0.5rem;
@@ -162,14 +161,38 @@
 
   }
 
-  .user-game-info-contain{
+  /*.user-game-info-contain{
     margin: 5rem auto;
-    width: 50%;
-    height: 40rem;
-    //background: #151422;
-    background: #1ddc8c;
+    padding: 1.5rem;
+    background: #2d2c46;
     border-radius: 10px;
-    box-shadow: 10px 10px 10px #0d0b1a;
+
+    .user-info-item{
+      border-radius: 10px;
+      background: #55537f;
+      margin: 2rem;
+      padding: 2rem;
+      font-size: 1.7rem;
+      box-shadow: 0px 10px 10px #171625;
+
+      &:hover{
+        background: #FFFFFF;
+        font-size: 2.5rem;
+      }
+    }
+
+  }*/
+
+}
+
+.user-follow-info-contain{
+  width: 100%;
+  height: 15vh;
+  background: #FFFFFF;
+  display: flex; justify-content: center; align-items: center;
+
+  .follow-item{
+
   }
 
 }
