--- a/src/user/scss/Join.scss
+++ b/src/user/scss/Join.scss
@@ -18,7 +18,7 @@
     flex-flow: row nowrap;
   }
 
-  /*// 950 이상
+  // 950 이상
   @media only screen and (min-height: 950px) {
     height: 100vh;
   }
@@ -26,7 +26,7 @@
   // 950 이하
   @media only screen and (max-height: 950px) {
     height: 60rem;
-  }*/
+  }
 
 }
 
