--- a/src/user/scss/JoinRight.scss
+++ b/src/user/scss/JoinRight.scss
@@ -9,11 +9,17 @@
   border-radius: 0 10px 10px 0;
 
   width: 30rem;
-  height: 90%;
+  height: 100%;
   padding: 2rem;
 
-  display: flex; flex-flow: column wrap;
+  display: flex;
+  flex-flow: column wrap;
   justify-content: space-between;
+
+  &.join-right-item::-webkit-scrollbar-track{
+    width: 1rem;
+    background: #FFFFFF80;
+  }
 
   .join-title{
     font-size: 3rem;
