--- a/src/user/scss/UserMyPage.scss
+++ b/src/user/scss/UserMyPage.scss
@@ -1,155 +1,177 @@
 
+
+
 @import "common";
 
-.user-info {
-  width: 100%;
-  height: 100vh;
+
+.user-page {
+  overflow-x: auto; /* 가로 스크롤 활성화 */
+  overflow-y: hidden; /* 세로 스크롤 숨김 */
+  white-space: nowrap; /* 섹션들이 한 줄로 표시됨 */
+  scroll-snap-type: both mandatory; /* 가로와 세로 스크롤 모두에 스냅을 적용 */
+  -webkit-overflow-scrolling: touch; /* iOS에서 부드러운 스크롤 지원 */
+  display: flex;
+  width: 100%; /* 부모 컨테이너의 가로 너비를 모두 차지 */
+  height: auto;
+
   background: #151422;
-  padding-bottom: 5rem;
-  position: relative;
+  //color: #FFFFFF;
 
-  .user-setting-buttons {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+  .user-info {
+    /*width: 100%;
+    height: 100vh;
+    padding-bottom: 5rem;
+    position: relative;*/
 
-    /*position: absolute;
-    bottom: 0; right: 0;*/
+    flex: 0 0 auto; /* 섹션들이 가로로 쌓이도록 설정 */
+    scroll-snap-align: start; /* 스크롤 시 섹션들이 가장 가까운 가장자리에 스냅됨 */
+    width: 100%; /* 섹션들이 부모 컨테이너에 맞게 너비를 갖음 */
+    height: 100vh; /* 섹션의 높이를 화면 높이와 동일하게 설정 */
 
-
-    /*.lobby-move-button {
-      border: 0;
-      font-family: 'Assistant', sans-serif;
-      color: #dfdfdf;
-      font-weight: bold;
-      font-size: 1.8rem;
-      display: flex;
-      align-items: center;
-      padding: 1.2rem;
-
-
-      .fill-door-open-fill-icon{
-        font-size: 2.5rem;
-        margin: 0.5rem;
-      }
-
-    }*/
-
-  }
-
-
-  .user-page-background {
-    width: 100%;
-    height: 45vh;
-    display: flex;
-    flex-flow: row nowrap;
-    align-items: end;
-    padding: 2rem 5rem 2rem;
-    position: relative;
-    z-index: 1;
-
-    .user-info-item-content {
-      width: 100%;
+    .user-setting-buttons {
       display: flex;
       flex-direction: row;
-      align-items: center;
+      justify-content: space-between;
 
-      .user-page-profile {
-        border-radius: 50%;
-        margin: 1rem;
-        padding: 2rem;
-        width: 9rem;
-        height: 9rem;
+      /*position: absolute;
+      bottom: 0; right: 0;*/
+
+
+      /*.lobby-move-button {
+        border: 0;
+        font-family: 'Assistant', sans-serif;
+        color: #dfdfdf;
+        font-weight: bold;
+        font-size: 1.8rem;
         display: flex;
         align-items: center;
-        justify-content: end;
-        font-size: 6rem;
+        padding: 1.2rem;
 
-        //background: linear-gradient(180deg, rgba(21, 20, 34, 1) 0%, rgba(51, 48, 80, 1) 100%);
-        /*background-repeat: no-repeat;
-        background-size: contain;
-        background-position: center;*/
-      }
 
-      .user-info-contain {
-
-        .user-name-item {
-          //flex-wrap: wrap;
-          //margin-bottom: 1rem;
-          //align-items: center;
-          display: flex;
-          justify-content: center;
-          font-size: 3rem;
-          color: #FFFFFF;
-          font-weight: bold;
+        .fill-door-open-fill-icon{
+          font-size: 2.5rem;
+          margin: 0.5rem;
         }
 
-        .user-login-state-item {
+      }*/
+
+    }
+
+
+    .user-page-background {
+      width: 100%;
+      height: 45vh;
+      display: flex;
+      flex-flow: row nowrap;
+      align-items: end;
+      padding: 2rem 5rem 2rem;
+      position: relative;
+      z-index: 1;
+
+      .user-info-item-content {
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+
+        .user-page-profile {
+          border-radius: 50%;
+          margin: 1rem;
+          padding: 2rem;
+          width: 9rem;
+          height: 9rem;
           display: flex;
-          flex-direction: row;
           align-items: center;
-          font-size: 2rem;
-          color: #FFFFFF;
+          justify-content: end;
+          font-size: 6rem;
 
-          .logout-state-icon {
-            //height: 4rem;
-            //width: 4rem;
-            //background: #D9D9D9;
-            //color: #868686;
-            //padding: 0.5rem;
-            font-size: 2.5rem;
-            border-radius: 50%;
-            margin: 0.7rem 1rem;
+          //background: linear-gradient(180deg, rgba(21, 20, 34, 1) 0%, rgba(51, 48, 80, 1) 100%);
+          /*background-repeat: no-repeat;
+          background-size: contain;
+          background-position: center;*/
+        }
+
+        .user-info-contain {
+          .user-name-item {
+            //flex-wrap: wrap;
+            //margin-bottom: 1rem;
+            //align-items: center;
             display: flex;
-            align-items: center;
             justify-content: center;
-            color: #aaa;
-            position: relative;
-            z-index: 2;
+            font-size: 3rem;
+            color: #FFFFFF;
+            font-weight: bold;
+          }
 
+          .user-login-state-item {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            font-size: 2rem;
+            color: #FFFFFF;
 
-            &.login-state-icon {
-              /*height: 4rem;
-              width: 4rem;*/
-              //background: #9A95E2;
-              //background: linear-gradient(180deg, rgba(207,130,255,1) 30%, rgba(255,100,165,1) 100%);
-              //background: #00000000;
-              //box-shadow: 0px 0px #FFFFFF;
-              //background: linear-gradient(180deg, rgba(21,20,34,1) 0%, rgba(51,48,80,1) 80%);
-              //font-size: 2.5rem;
-              //display: flex; align-items: center; justify-content: center;
-              //background: linear-gradient(90deg, #5fffa9 0%, #ab56ff 100%);
-              //filter: drop-shadow(0px 0px 10px #ffffff);
-              color: #FFFFFF;
+            .logout-state-icon {
+              //height: 4rem;
+              //width: 4rem;
+              //background: #D9D9D9;
+              //color: #868686;
+              //padding: 0.5rem;
+              font-size: 2.5rem;
               border-radius: 50%;
-              padding: 0.5rem;
+              margin: 0.7rem 1rem;
+              display: flex;
+              align-items: center;
+              justify-content: center;
+              color: #aaa;
+              position: relative;
+              z-index: 2;
 
-              &:before {
-                z-index: -1;
-                content: "";
-                position: absolute;
-                //height: 4rem; width: 4rem;
-                //background: #9A95E290;
-                //background: red;
+
+              &.login-state-icon {
+                /*height: 4rem;
+                width: 4rem;*/
+                //background: #9A95E2;
                 //background: linear-gradient(180deg, rgba(207,130,255,1) 30%, rgba(255,100,165,1) 100%);
-                //background: #ff2e2e50;
-                //filter: blur(7px);
-                //-webkit-filter: blur(10px);
-                //border-radius: 50%;
+                //background: #00000000;
+                //box-shadow: 0px 0px #FFFFFF;
+                //background: linear-gradient(180deg, rgba(21,20,34,1) 0%, rgba(51,48,80,1) 80%);
+                //font-size: 2.5rem;
+                //display: flex; align-items: center; justify-content: center;
+                //background: linear-gradient(90deg, #5fffa9 0%, #ab56ff 100%);
+                //filter: drop-shadow(0px 0px 10px #ffffff);
+                color: #FFFFFF;
+                border-radius: 50%;
+                padding: 0.5rem;
+
+                &:before {
+                  z-index: -1;
+                  content: "";
+                  position: absolute;
+                  //height: 4rem; width: 4rem;
+                  //background: #9A95E290;
+                  //background: red;
+                  //background: linear-gradient(180deg, rgba(207,130,255,1) 30%, rgba(255,100,165,1) 100%);
+                  //background: #ff2e2e50;
+                  //filter: blur(7px);
+                  //-webkit-filter: blur(10px);
+                  //border-radius: 50%;
+                }
+
               }
 
             }
 
-          }
+            .logout-state-modal {
+              color: #aaa;
 
-          .logout-state-modal {
-            color: #aaa;
+              &.login-state-modal {
+                color: #FFFFFF;
+                text-shadow: 0px 0px 10px #FFFFFF;
+              }
 
-            &.login-state-modal {
-              color: #FFFFFF;
-              text-shadow: 0px 0px 10px #FFFFFF;
             }
 
+
           }
 
 
@@ -158,68 +180,82 @@
 
       }
 
+      &:before {
+        width: 100%;
+        height: 50vh;
+        background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(21, 20, 34, 1) 100%);
+        position: absolute;
+        z-index: -1;
+        bottom: 0;
+        right: 0;
+        content: "";
+      }
 
     }
 
-    &:before {
+    .user-game-info-contain{
       width: 100%;
-      height: 50vh;
-      background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(21, 20, 34, 1) 100%);
-      position: absolute;
-      z-index: -1;
-      bottom: 0;
-      right: 0;
-      content: "";
-    }
-
-  }
-
-  .user-game-info-contain{
-    width: 100%;
-    height: 15vh;
-    display: flex;
-    justify-content: space-around;
-    align-content: start;
-    margin-top: 1rem;
-
-    .user-follow-item
-    , .game-score-item
-    , .game-playing-record{
-      width: 25rem;
+      height: 15vh;
       display: flex;
-      align-items: center;
-      flex-direction: column;
-      font-size: 1.5rem;
-      font-weight: bold;
-      color: #FFFFFF;
+      justify-content: space-around;
+      align-content: start;
+      margin-top: 1rem;
 
-      .follow-star-icon
-      , .game-score-icon
-      , .game-playing-icon{
-        border-radius: 50%;
-        font-size: 4.5rem;
-        text-align: center;
-        //margin: 0.5rem;
-        color: #1ddc8c;
+      .user-follow-item
+      , .game-score-item
+      , .game-playing-record
+      , .create-member-date{
+        width: 25rem;
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        font-size: 1.5rem;
+        font-weight: bold;
+        color: #FFFFFF;
 
-        &.starFollow{
+        .follow-star-icon
+        , .game-score-icon
+        , .game-playing-icon
+        , .game-create-start-icon{
+          border-radius: 50%;
+          font-size: 4.5rem;
+          text-align: center;
+          //margin: 0.5rem;
+          color: #1ddc8c;
+
+          &.starFollow{
+          }
+
+        }
+
+        p{
+          font-size: 2.5rem;
+          margin: 0.5rem auto 1rem;
+        }
+
+        button{
+          border: 0;
+          color: #FFFFFF;
+          font-size: 1.5rem;
+          font-weight: bold;
+        }
+
+        .user-follow-list-item{
+          background: #FFFFFF;
+          width: 20rem;
+          margin: 1rem;
+          border-radius: 10px;
+
+
+          li{
+            color: #333333;
+          }
+
         }
 
       }
 
-      p{
-        font-size: 2.5rem;
-        margin: 0.5rem auto 1rem;
-      }
-
-      button{
-        border: 0;
-        color: #FFFFFF;
-        font-size: 1.5rem;
-        font-weight: bold;
-      }
-
-      .user-follow-list-item{
+      /*.user-follow-list-item{
         background: #FFFFFF;
         width: 20rem;
         margin: 1rem;
@@ -229,47 +265,45 @@
         li{
           color: #333333;
         }
+      }*/
 
-      }
+      /*.score-item{
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        font-size: 1.5rem;
+        font-weight: bold;
+
+        .game-score-icon{
+          background-color: #FFEA00;
+          border-radius: 50%;
+          padding: 0.7rem;
+          font-size: 1.7rem;
+          text-align: center;
+          margin: 0.5rem;
+        }
+
+      }*/
+
+
 
     }
 
-    /*.user-follow-list-item{
-      background: #FFFFFF;
-      width: 20rem;
-      margin: 1rem;
-      border-radius: 10px;
+    /*&.user-info > h1 {
+      position: absolute;
+      top: 50%; left: 50%;
+      transform: translate(-50%,-50%);
 
-
-      li{
-        color: #333333;
-      }
-    }*/
-
-    /*.score-item{
-      display: flex;
-      align-items: center;
-      flex-direction: column;
-      font-size: 1.5rem;
+      font-size: 20em;
       font-weight: bold;
-
-      .game-score-icon{
-        background-color: #FFEA00;
-        border-radius: 50%;
-        padding: 0.7rem;
-        font-size: 1.7rem;
-        text-align: center;
-        margin: 0.5rem;
-      }
-
+      text-shadow: 4px 4px 4px rgba(0, 0, 0, 0.6);
     }*/
-
-
 
   }
 
-
 }
+
+
 
 
 
